# How-to-Prompt

./: .gitignore  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: workspaces.py
apps/api/app/auth/: __init__.py  clerk.py
apps/api/app/core/: config.py
apps/api/app/models/: workspace.py
apps/api/app/schemas/: workspace.py
apps/api/app/services/: workspaces.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260618_0001_initial_auth_workspace.py
apps/api/tests/: test_workspaces.py
apps/web/: .env.example  README.md  middleware.ts  package.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/app/: page.tsx
apps/web/components/: DashboardClient.tsx
apps/web/lib/: api.ts  env.ts
docs/: architecture.md
