[project]
name = "promptverse-api"
version = "0.1.0"
description = "PromptVerse X API"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "pydantic-settings>=2.4.0",
  "pyjwt[crypto]>=2.9.0",
  "python-slugify>=8.0.4",
  "sqlalchemy[asyncio]>=2.0.32",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0",
  "mypy>=1.11.1",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.7"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
